# git-commit-rewriter

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml  config.toml.example
.github/workflows/: ci.yml  release.yml
scripts/: build-linux.sh  build-macos-app.sh  build-windows.sh
src/: app.rs  main.rs
src/background/: messages.rs  mod.rs  tasks.rs
src/git/: commands.rs  mod.rs  operations.rs  repository.rs
src/models/: commit.rs  log.rs  mod.rs  preview.rs
src/ui/: commits_list.rs  editor_panel.rs  logs_panel.rs  main_window.rs  mod.rs  preview_modal.rs
tests/: integration_test.rs
